--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         let h3class = Nom.classList.add("font-medium");
         let h3class2 = Nom.classList.add("text-gray-900");
 
-        //let div3 = document.createElement("div");
+        let div3 = document.createElement("div");
 
         Nom.appendChild(nomTexte);
         console.log(Nom);
